# odbcffi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  renovate.json
.github/workflows/: ci.yml
odbcffi/: README.md  __init__.py
odbcffi/db_api/: __init__.py  connection.py  cursor.py  errors.py
odbcffi/odbc/: __init__.py  connection_handle.py  driver_manager.py  dto.py  enums.py  environment_handle.py  errors.py  handle.py  statement_handle.py
tests/: conftest.py
tests/odbc/: test_basic_odbc_programming_steps.py  test_connection_handle.py  test_driver_manager.py  test_environment_handle.py
